# upload-control-plane

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  index.md  industrial_multipart_upload_control_plane_design.md  operations-observability.md
docs/agentic-engineering/: deliverables.md  document-structure.md  experiment-design.md  human-role-and-autonomy.md  project-charter.md
docs/tasks/: README.md
migrations/: env.py
migrations/versions/: 20260624_0001_persistence_base.py  20260624_0002_core_schema.py  20260624_0003_dataset_governance_schema.py  20260624_0004_upload_lifecycle_schema.py  20260624_0005_validation_audit_outbox_idempotency_schema.py  20260625_0006_device_credentials_schema.py
scripts/: benchmark_upload.py  dev.ps1  migrate.py  seed_dev.py
src/upload_control_plane/: config.py  main.py  observability.py
tests/: test_config.py  test_health.py  test_package.py  test_phase13_capability_gaps.py
tests/api/: test_auth_foundation.py  test_cors.py  test_dataset_lifecycle_api.py  test_device_identity_api.py  test_observability.py  test_project_authorization.py  test_upload_session_runtime_api.py  test_upload_task_api_foundation.py
tests/application/: test_dataset_validation_worker.py  test_outbox.py  test_worker_lifecycle.py
tests/cli/: test_cli_commands.py  test_manifest.py
tests/domain/: test_aggregates.py  test_datasets.py  test_fingerprints.py  test_object_keys.py  test_parts.py  test_permissions.py  test_session_state.py  test_storage.py
tests/infrastructure/: test_alembic_config.py  test_core_schema.py  test_dataset_governance_schema.py  test_db_session.py  test_device_credentials_schema.py  (+4 more)
(+212 files in other folders)
